--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Turing Alumni Site
 <section class="splash">
   <div class="splash-text">
     <h1>Turing Alumni Site</h1>
-    <p>Resources and links for Turing graduates.</p>
+    <p>Resources, events, and volunteer opportunities for Turing graduates</p>
   </div>
 </section>
 
@@ -14,11 +14,9 @@ title: Turing Alumni Site
   <h2>Alumni Resources</h2>
   <p>Welcome to the Turing Alumni Site!</p>
 
-  <a class="btn btn-dark" href="/connect">Stay Connected</a>
+  <a class="btn btn-dark" href="/connect">Resources & Events</a>
   <a class="btn btn-dark" href="/volunteer">Volunteer Opportunities</a>
-  <a class="btn btn-dark" href="https://careerdev.turing.edu/">Professional Development</a>
   <a class="btn btn-dark" href="/faqs">FAQs</a>
-  <a class="btn btn-dark" href="https://turing.edu/donate">Donate</a>
 </section>
 
 <footer>
