--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: main
-title: Turing Alumni Site
+title: Turing School Alumni Site
 ---
 
 <section class="splash">
   <div class="splash-text">
     <h1>Turing Alumni Site</h1>
-    <p>Resources, events, and volunteer opportunities for Turing graduates</p>
+    <p>Resources, events, and volunteer opportunities for Turing School graduates</p>
   </div>
 </section>
 
 <section class="resources-section section-light">
   <h2>Alumni Resources</h2>
-  <p>Welcome to the Turing Alumni Site!</p>
+  <p>Welcome to the Turing School Alumni Site!</p>
 
   <a class="btn btn-dark" href="/connect">Resources & Events</a>
   <a class="btn btn-dark" href="/volunteer">Volunteer Opportunities</a>
