--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Turing School Alumni Site
   <h2>Alumni Resources</h2>
   <p>Welcome to the Turing School Alumni Site!</p>
 
-  <a class="btn btn-dark" href="/connect">Resources & Events</a>
+  <a class="btn btn-dark" href="/connect">Events & Resources</a>
   <a class="btn btn-dark" href="/volunteer">Volunteer Opportunities</a>
   <a class="btn btn-dark" href="/faqs">FAQs</a>
 </section>
