--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Turing School Alumni Site
 
 <section class="splash">
   <div class="splash-text">
-    <h1>Turing Alumni Site</h1>
-    <p>Resources, events, and volunteer opportunities for Turing School graduates</p>
+    <h1>Turing School Alumni Site</h1>
+    <p>Events, resources, and volunteer opportunities for Turing School graduates</p>
   </div>
 </section>
 
