--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ title: Turing School Alumni Site
 <section class="splash">
   <div class="splash-text">
     <h1>Turing School Alumni Site</h1>
-    <p>Events, resources, and volunteer opportunities for Turing School graduates</p>
+    <p>Your hub for all things alumni at Turing</p>
   </div>
 </section>
 
 <section class="resources-section section-light">
-  <h2>Alumni Resources</h2>
-  <p>Welcome to the Turing School Alumni Site!</p>
+  <h2>Alumni Hub</h2>
+  <p>Events, resources, and volunteer opportunities for Turing School graduates</p>
 
   <a class="btn btn-dark" href="/connect">Events & Resources</a>
   <a class="btn btn-dark" href="/volunteer">Volunteer Opportunities</a>
