--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@ title: Turing School Alumni Site
 <section class="splash">
   <div class="splash-text">
     <h1>Turing School Alumni Site</h1>
-    <p>Your hub for all things alumni at Turing</p>
+    <p>Stay connected as you launch and advance your career</p>
   </div>
 </section>
 
 <section class="resources-section section-light">
-  <h2>Alumni Hub</h2>
+  <h2>Alumni Engagement Hub</h2>
   <p>Events, resources, and volunteer opportunities for Turing School graduates</p>
 
   <a class="btn btn-dark" href="/connect">Events & Resources</a>
